syntax = "proto3";

package BusinessDataModel;

message ReferenceMaster {
    string masterEntityName = 1;
    string masterEntityType = 2;
    string masterEntityDescription = 3;
    bool status = 4;
}

message UpdateReferenceMaster {
    uint32 id = 1;
    string masterEntityName = 2;
    string masterEntityType = 3;
    string masterEntityDescription = 4;
    bool status = 5;
}

message ReferenceMasterResponse {
    uint32 id = 1;
    string masterEntityName = 2;
    string masterEntityType = 3;
    string masterEntityDescription = 4;
    bool status = 5;
    string createdAt = 6;
    string updatedAt = 7;
}

message ReferenceMasters {
    repeated ReferenceMasterResponse referenceMasters = 1;
}